--- a/Components/Pages/Home.razor
+++ b/Components/Pages/Home.razor
@@ -1,7 +1,10 @@
 ﻿@page "/"
+   
 
 <PageTitle>Home</PageTitle>
 
-<h1>Hello, world!</h1>
+<h1>OD533</h1>
 
-Welcome to your new app.
+Benvenuti a questa App di esempio.
+ 
+ 
