--- a/Components/Layout/NavMenu.razor
+++ b/Components/Layout/NavMenu.razor
@@ -1,6 +1,6 @@
 ﻿<div class="top-row ps-3 navbar navbar-dark">
     <div class="container-fluid">
-        <a class="navbar-brand" href="">OD533_BlazorApp</a>
+        <a class="navbar-brand" href="">BlazorApp8</a>
     </div>
 </div>
 
@@ -13,6 +13,13 @@
                 <span class="bi bi-house-door-fill-nav-menu" aria-hidden="true"></span> Home
             </NavLink>
         </div>
+
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="vehicles">
+                <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Vehicles
+            </NavLink>
+        </div>
+
 
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="counter">
