--- a/Components/_Imports.razor
+++ b/Components/_Imports.razor
@@ -6,5 +6,5 @@
 @using static Microsoft.AspNetCore.Components.Web.RenderMode
 @using Microsoft.AspNetCore.Components.Web.Virtualization
 @using Microsoft.JSInterop
-@using OD533_BlazorApp
-@using OD533_BlazorApp.Components
+@using BlazorApp8
+@using BlazorApp8.Components
